--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 # action.yml in nikolay-e/docker-nginx-vps-deploy-action
 
 name: 'Docker Nginx VPS Deployer (Python)'
-description: 'Builds/pushes Docker image, deploys via SSH using Python/Fabric, configures Nginx with SSL.'
+description: 'Builds/pushes Docker image, deploys via SSH using Python/Fabric, optionally configures Nginx with SSL.'
 author: 'nikolay-e'
 branding:
   icon: 'terminal'
@@ -9,8 +9,9 @@ branding:
 
 # --- Inputs ---
 inputs:
+  # Docker related
   image-name:
-    description: "Base name for the Docker image (e.g., 'my-web-app'). No registry/username prefix."
+    description: "Base name for the Docker image (e.g., 'my-web-app'). No registry/username prefix. Full URL: registry/username/image-name:tag"
     required: true
   docker-registry-username:
     description: "Username for the Docker registry (e.g., Docker Hub username)."
@@ -23,32 +24,58 @@ inputs:
     description: "Path to the Dockerfile, relative to docker-context."
     required: false
     default: "Dockerfile"
+
+  # VPS/SSH related
   vps-host:
     description: "Hostname or IP address of the target VPS."
     required: true
   vps-user:
-    description: "Username for SSH login to the VPS."
+    description: "Username for SSH login to the VPS (must have passwordless sudo)."
     required: true
+
+  # Application/Nginx related
   container-port:
-    description: "The port number the application listens on *inside* the container."
+    description: "The host port (on 127.0.0.1) that Nginx will proxy requests to. Example: 8080"
     required: true
+  container-internal-port:
+    description: "The port the application listens on *inside* the Docker container. Example: 80 or 3000"
+    required: false
+    default: '80'
   domain:
-    description: "The public domain name (e.g., 'app.example.com') for Nginx."
+    description: "The public domain name (e.g., 'app.example.com') for Nginx and SSL."
     required: true
-  # Secrets (Documentation Only - Must be passed via `env` in workflow)
-  # DOCKER_REGISTRY_TOKEN: Token/password for Docker registry.
-  # VPS_SSH_PRIVATE_KEY: Private SSH key for VPS access (raw or Base64).
-  # SSL_CERT: SSL certificate content (raw or Base64).
-  # SSL_KEY: SSL private key content (raw or Base64).
+
+  # Control flags
+  nginx-skip:
+    description: "Set to 'true' to skip Nginx configuration and reload steps."
+    required: false
+    default: 'false'
+  ssl-skip:
+    description: "Set to 'true' to skip SSL certificate deployment (Nginx will be HTTP only if nginx-skip is false)."
+    required: false
+    default: 'false'
+  docker-prune-filter:
+    description: "Filter for 'docker image prune -af'. Example: 'until=1h' or 'label=stage=prod'"
+    required: false
+    default: 'until=1h'
+
+  # Secrets documentation (Passed via env)
+  # DOCKER_REGISTRY_TOKEN: Docker registry access token/password.
+  # VPS_SSH_PRIVATE_KEY: Private SSH key content (PEM or Base64).
+  # SSL_CERT: SSL certificate content (PEM or Base64, needed if ssl-skip is false).
+  # SSL_KEY: SSL private key content (PEM or Base64, needed if ssl-skip is false).
 
 # --- Outputs ---
 outputs:
   image-tag:
     description: "The short git SHA tag used for the built image (e.g., 'a1b2c3d')."
+    value: ${{ steps.docker-metadata.outputs.image_tag }}
   image-url:
     description: "The full URL of the pushed image, including the tag."
+    value: ${{ steps.docker-metadata.outputs.image_url }}
   deployment-url:
-    description: "The final HTTPS URL where the application is expected to be available."
+    description: "The final HTTPS URL (or HTTP if SSL/Nginx skipped) where the application is expected to be available."
+    value: ${{ steps.docker-metadata.outputs.deployment_url }}
 
 # --- Action Steps ---
 runs:
@@ -56,15 +83,13 @@ runs:
   steps:
     # --- Docker Build & Push Steps ---
     - name: Setup Docker Buildx
-      id: setup-buildx
       uses: docker/setup-buildx-action@v3
 
     - name: Login to Docker Registry
-      id: login-docker
       uses: docker/login-action@v3
       with:
         username: ${{ inputs.docker-registry-username }}
-        password: ${{ env.DOCKER_REGISTRY_TOKEN }}
+        password: ${{ env.DOCKER_REGISTRY_TOKEN }} # Use env var
 
     - name: Generate Docker Image Metadata
       id: docker-metadata
@@ -77,13 +102,17 @@ runs:
           LATEST_IMAGE_URL="${{ inputs.docker-registry-username }}/${{ inputs.image-name }}:latest"
           LATEST_TAG_ARG=$LATEST_IMAGE_URL
         fi
+        DEPLOY_PROTO="https"
+        if [[ "${{ inputs.nginx-skip }}" == "true" || ("${{ inputs.nginx-skip }}" == "false" && "${{ inputs.ssl-skip }}" == "true") ]]; then
+           DEPLOY_PROTO="http"
+        fi
+        DEPLOY_URL="${DEPLOY_PROTO}://${{ inputs.domain }}"
         echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
         echo "image_url=$FULL_IMAGE_URL" >> $GITHUB_OUTPUT
         echo "latest_tag_argument=$LATEST_TAG_ARG" >> $GITHUB_OUTPUT
-        echo "deployment_url=https://${{ inputs.domain }}" >> $GITHUB_OUTPUT
+        echo "deployment_url=${DEPLOY_URL}" >> $GITHUB_OUTPUT
 
     - name: Build and Push Docker Image
-      id: build-push
       uses: docker/build-push-action@v5
       with:
         context: ${{ inputs.docker-context }}
@@ -98,61 +127,31 @@ runs:
     # --- Nginx Config Preparation ---
     - name: Prepare Nginx Configuration (Base64)
       id: prepare-nginx
+      if: inputs.nginx-skip == 'false'
       shell: bash
       run: |
-        echo "Generating Nginx config for domain '${{ inputs.domain }}'..."
-        # Define the Nginx configuration template
-        read -r -d '' NGINX_TEMPLATE << EOM || true
-        server {
-            listen 80;
-            server_name ${{ inputs.domain }} www.${{ inputs.domain }}; # Optional www.
-            location / { return 301 https://\$host\$request_uri; }
-        }
-
-        server {
-            listen 443 ssl http2;
-            server_name ${{ inputs.domain }} www.${{ inputs.domain }}; # Optional www.
-
-            # SSL Certificate files
-            ssl_certificate /etc/nginx/ssl/${{ inputs.domain }}.crt;
-            ssl_certificate_key /etc/nginx/ssl/${{ inputs.domain }}.key;
-
-            # --- Basic Secure SSL Settings (Included directly) ---
-            ssl_protocols TLSv1.2 TLSv1.3;
-            # Using Mozilla Intermediate cipher suite (recommended)
-            ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-            ssl_prefer_server_ciphers off;
-            # --- End Basic SSL Settings ---
-
-            # Optional: ssl_dhparam (generate on VPS if needed)
-            # ssl_dhparam /etc/nginx/ssl/dhparam.pem;
-
-            # Optional: Security Headers
-            # add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always; # Use preload only if sure
-            # add_header X-Frame-Options "SAMEORIGIN" always;
-            # add_header X-Content-Type-Options "nosniff" always;
-
-            location / {
-                proxy_pass http://127.0.0.1:${{ inputs.container-port }};
-                proxy_set_header Host \$host;
-                proxy_set_header X-Real-IP \$remote_addr;
-                proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto \$scheme;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade \$http_upgrade;
-                proxy_set_header Connection \$http_connection;
-                proxy_cache_bypass \$http_upgrade;
-            }
-        }
-        EOM
-        # Base64 encode
-        NGINX_CONF_B64=$(echo "$NGINX_TEMPLATE" | base64 -w 0)
+        echo "Preparing Nginx config from template for domain '${{ inputs.domain }}'..."
+        TEMPLATE_FILE="$GITHUB_ACTION_PATH/nginx_template.conf"
+        RENDERED_FILE="nginx.conf.rendered"
+        if [ ! -f "$TEMPLATE_FILE" ]; then
+          echo "::error::Nginx template file not found at $TEMPLATE_FILE"
+          exit 1
+        fi
+        sed -e "s|__DOMAIN__|${{ inputs.domain }}|g" \
+            -e "s|__CONTAINER_PORT__|${{ inputs.container-port }}|g" \
+            "$TEMPLATE_FILE" > "$RENDERED_FILE"
+        if [ ! -s "$RENDERED_FILE" ]; then
+           echo "::error::Rendered Nginx config file is empty."
+           exit 1
+        fi
+        NGINX_CONF_B64=$(base64 -w 0 < "$RENDERED_FILE")
+        rm "$RENDERED_FILE"
         echo "Nginx config prepared and Base64 encoded."
         echo "nginx_conf_base64=$NGINX_CONF_B64" >> $GITHUB_OUTPUT
+        # Note: The $NGINX_CONF_B64 value will appear in the env context log below, this is expected.
 
     # --- Python Deployment Steps ---
     - name: Set up Python Environment
-      id: setup-python
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
@@ -162,43 +161,38 @@ runs:
       shell: bash
       run: |
         pip install --upgrade pip
-        # Assuming requirements.txt and deploy_vps.py are in the root of the action repo
-        if [ -f "$GITHUB_ACTION_PATH/requirements.txt" ]; then
-          pip install -r "$GITHUB_ACTION_PATH/requirements.txt"
+        REQ_FILE="$GITHUB_ACTION_PATH/requirements.txt"
+        if [ -f "$REQ_FILE" ]; then
+          echo "Installing dependencies from $REQ_FILE..."
+          pip install -r "$REQ_FILE"
         else
-          echo "requirements.txt not found in action directory."
-          # Optionally install Fabric directly if requirements.txt isn't found
-          # pip install fabric invoke paramiko
+          echo "::warning::requirements.txt not found. Installing default dependencies."
+          pip install fabric invoke paramiko
         fi
 
     - name: Execute Python Deployment Script
       id: deploy-vps-python
       shell: bash
-      env:
+      env: # Pass secrets via environment variables
         SECRET_VPS_SSH_PRIVATE_KEY: ${{ env.VPS_SSH_PRIVATE_KEY }}
         SECRET_SSL_CERT: ${{ env.SSL_CERT }}
         SECRET_SSL_KEY: ${{ env.SSL_KEY }}
         VAR_NGINX_CONF_B64: ${{ steps.prepare-nginx.outputs.nginx_conf_base64 }}
       run: |
-        # Ensure the python script exists before running
-        if [ ! -f "$GITHUB_ACTION_PATH/deploy_vps.py" ]; then
-           echo "Error: deploy_vps.py not found in action directory ($GITHUB_ACTION_PATH)."
-           exit 1
+        # Use main.py as the entry point now
+        PYTHON_SCRIPT="$GITHUB_ACTION_PATH/main.py"
+        if [ ! -f "$PYTHON_SCRIPT" ]; then
+            echo "::error::Deployment script not found at $PYTHON_SCRIPT"
+            exit 1
         fi
-        python "$GITHUB_ACTION_PATH/deploy_vps.py" \
+        python "$PYTHON_SCRIPT" \
           --host "${{ inputs.vps-host }}" \
           --user "${{ inputs.vps-user }}" \
           --image-url "${{ steps.docker-metadata.outputs.image_url }}" \
           --image-name "${{ inputs.image-name }}" \
           --container-port "${{ inputs.container-port }}" \
-          --domain "${{ inputs.domain }}"
-
-    # --- Finalize Outputs ---
-    - name: Finalize Action Outputs
-      id: finalize-outputs
-      shell: bash
-      run: |
-        echo "Action completed. Setting final outputs."
-        echo "image-tag=${{ steps.docker-metadata.outputs.image_tag }}" >> $GITHUB_OUTPUT
-        echo "image-url=${{ steps.docker-metadata.outputs.image_url }}" >> $GITHUB_OUTPUT
-        echo "deployment-url=${{ steps.docker-metadata.outputs.deployment_url }}" >> $GITHUB_OUTPUT
+          --container-internal-port "${{ inputs.container-internal-port }}" \
+          --domain "${{ inputs.domain }}" \
+          --nginx-skip "${{ inputs.nginx-skip }}" \
+          --ssl-skip "${{ inputs.ssl-skip }}" \
+          --docker-prune-filter "${{ inputs.docker-prune-filter }}"
