--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,9 @@ inputs:
   docker-registry-username:
     description: "Username for the Docker registry (e.g., Docker Hub username)."
     required: true
+  docker-registry-token:
+    description: "Token for the Docker registry. Will be used to authenticate with the registry."
+    required: true
   docker-context:
     description: "Path to the Docker build context directory."
     required: false
@@ -32,6 +35,19 @@ inputs:
   vps-user:
     description: "Username for SSH login to the VPS (must have passwordless sudo)."
     required: true
+  vps-ssh-private-key:
+    description: "Private SSH key content (PEM or Base64) for connecting to the VPS."
+    required: true
+
+  # SSL related
+  ssl-cert:
+    description: "SSL certificate content (PEM or Base64) for HTTPS. Required if ssl-skip is false."
+    required: false
+    default: ""
+  ssl-key:
+    description: "SSL private key content (PEM or Base64) for HTTPS. Required if ssl-skip is false."
+    required: false
+    default: ""
 
   # Application/Nginx related
   container-port:
@@ -59,12 +75,6 @@ inputs:
     required: false
     default: 'until=1h'
 
-  # Secrets documentation (Passed via env)
-  # DOCKER_REGISTRY_TOKEN: Docker registry access token/password.
-  # VPS_SSH_PRIVATE_KEY: Private SSH key content (PEM or Base64).
-  # SSL_CERT: SSL certificate content (PEM or Base64, needed if ssl-skip is false).
-  # SSL_KEY: SSL private key content (PEM or Base64, needed if ssl-skip is false).
-
 # --- Outputs ---
 outputs:
   image-tag:
@@ -89,7 +99,7 @@ runs:
       uses: docker/login-action@v3
       with:
         username: ${{ inputs.docker-registry-username }}
-        password: ${{ env.DOCKER_REGISTRY_TOKEN }} # Use env var
+        password: ${{ inputs.docker-registry-token }}
 
     - name: Generate Docker Image Metadata
       id: docker-metadata
@@ -177,10 +187,11 @@ runs:
     - name: Execute Python Deployment Script
       id: deploy-vps-python
       shell: bash
-      env: # Pass secrets via environment variables
-        SECRET_VPS_SSH_PRIVATE_KEY: ${{ env.VPS_SSH_PRIVATE_KEY }}
-        SECRET_SSL_CERT: ${{ env.SSL_CERT }}
-        SECRET_SSL_KEY: ${{ env.SSL_KEY }}
+      env: 
+        # Pass secrets securely - these are automatically masked by GitHub
+        SECRET_VPS_SSH_PRIVATE_KEY: ${{ inputs.vps-ssh-private-key }}
+        SECRET_SSL_CERT: ${{ inputs.ssl-cert }}
+        SECRET_SSL_KEY: ${{ inputs.ssl-key }}
         VAR_NGINX_CONF_B64: ${{ steps.prepare-nginx.outputs.nginx_conf_base64 }}
       run: |
         # Use main.py as the entry point now
